--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <div class="row my-4">
         <div class="col-lg-12">
             <% if (message) { %>
-                <div class="alert alert-dismissible fade show alert<%- message.type %>" role="alert">
+                <div class="alert alert-dismissible fade show alert<%= message.type %>" role="alert">
                     <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
                     <strong><%= message.message %></strong>
                 </div>
