--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a href="/home" class="navbar-brand"><i class="fas fa-code me-2"></i>NODEJS</a>
+            <a href="/" class="navbar-brand"><i class="fas fa-code me-2"></i>NODEJS</a>
             <button class="navbar-toggler" data-bs-target="#my-nav" data-bs-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="my-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/home" ><i class="fas fa-home me-1"></i>Home</a>
+                        <a class="nav-link" href="/" ><i class="fas fa-home me-1"></i>Home</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="/add"><i class="fas fa-user-plus me-1"></i>Add User</a>
